fixed overflow on small screen devices

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,17 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+html {
+  height: 100%;
+  overflow-y: hidden;
+}
 body {
-  min-height: 100vh;
+  position: relative;
+  /* min-height: 100vh; */
   font-family: "Kumbh Sans", sans-serif;
+  height: 100%;
   overflow: hidden;
-  height: 100vh;
+
   width: 100%;
   background: hsl(185, 75%, 39%);
   color: hsl(227, 10%, 46%);
@@ -27,6 +32,7 @@ body {
   right: 0;
 
   transform: translate(25%, 65%);
+  overflow: hidden;
 }
 
 .card {
@@ -130,12 +136,12 @@ body {
 }
 
 .attribution {
+  width: 100%;
   font-size: 12px;
   position: fixed;
   bottom: 10px;
   color: beige;
-  left: 50%;
-  transform: translateX(-50%);
+  text-align: center;
 }
 .attribution a {
   padding: 5px;
